--- a/yacc-backend/build.gradle
+++ b/yacc-backend/build.gradle
@@ -38,12 +38,14 @@ sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
 dependencies {
-  compile 'javax.servlet:servlet-api:2.5'
+    compile 'javax.servlet:servlet-api:2.5'
 }
 
 appengine {
-  downloadSdk = false
-  appcfg {
-    oauth2 = false
-  }
+    daemon = false
+    httpAddress = '0.0.0.0'
+    downloadSdk = false
+    appcfg {
+        oauth2 = false
+    }
 }
