--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,38 @@
 apply plugin: 'com.android.application'
 
+dependencies {
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile project(':core')
+    compile project(':yacc-backend')
+    compile 'com.android.support:support-v4:21.0.0'
+    compile 'com.android.support:appcompat-v7:21.0.0'
+    compile 'com.android.support:recyclerview-v7:21.0.0'
+    compile 'com.android.support:cardview-v7:21.0.0'
+
+    // Intellij annotations (NotNull, Nullable)
+    compile 'com.intellij:annotations:12.0'
+
+    // my library providing the preconditions checks from Guava
+    compile 'com.omricat:guava-preconditions:18.0'
+
+    compile 'com.squareup.dagger:dagger:1.2.2'
+
+    compile 'com.squareup.retrofit:retrofit:1.8.0'
+    compile 'com.squareup.retrofit:converter-jackson:1.8.0'
+
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.4.3'
+
+    compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
+    compile 'com.squareup.okhttp:okhttp:2.0.0'
+
+    compile 'io.reactivex:rxjava:1.0.0'
+    compile 'io.reactivex:rxandroid:0.23.0'
+
+    compile 'com.jakewharton:butterknife:6.0.0'
+    compile 'com.jakewharton:disklrucache:2.0.2'
+}
+
+
 android {
     compileSdkVersion 21
     buildToolsVersion "21.0.1"
@@ -21,18 +54,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
     }
+
+    packagingOptions {
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/NOTICE'
+    }
 }
 
-dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':core')
-    compile project(':yacc-backend')
-    compile 'com.android.support:support-v4:21.0.0'
-    compile 'com.intellij:annotations:12.0'
-    compile 'com.omricat:guava-preconditions:18.0'
-    compile 'com.android.support:appcompat-v7:21.0.0'
-    compile 'com.squareup.dagger:dagger:1.2.2'
-    compile 'com.jakewharton:butterknife:6.0.0'
-
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.4.3'
-}
