--- a/yacc-backend/build.gradle
+++ b/yacc-backend/build.gradle
@@ -1,19 +1,3 @@
-/*
- * Copyright 2014 Omricat Software
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
 // If you would like more information on the gradle-appengine-plugin please refer to the github page
 // https://github.com/GoogleCloudPlatform/gradle-appengine-plugin
 
@@ -26,9 +10,6 @@ buildscript {
     }
 }
 
-repositories {
-    mavenCentral();
-}
 
 apply plugin: 'java'
 apply plugin: 'war'
@@ -38,14 +19,40 @@ sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
 dependencies {
+    // Intellij annotations (NotNull, Nullable)
+    compile project(':core')
+    compile 'com.intellij:annotations:12.0'
+    // my library providing the preconditions checks from Guava
+    compile 'com.omricat.guava-preconditions:guava-preconditions:18.0'
+
     compile 'javax.servlet:servlet-api:2.5'
+
+    compile 'com.bazaarvoice.jolt:jolt-core:0.0.14'
+    compile 'com.bazaarvoice.jolt:json-utils:0.0.14'
+
+    compile 'com.google.appengine.tools:appengine-gcs-client:0.4.3'
+
+    compile 'com.squareup.retrofit:retrofit:1.8.0'
+    compile 'com.squareup.retrofit:converter-jackson:1.8.0'
+
+    compile 'io.reactivex:rxjava:1.0.1'
+
 }
 
 appengine {
+
     daemon = false
     httpAddress = '0.0.0.0'
     downloadSdk = false
     appcfg {
         oauth2 = false
+
+        app {
+            id = 'yacc-backend'
+        }
+
+        update {
+            useJava7 = true
+        }
     }
 }
