--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'com.android.application'
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':core')
     compile project(':yacc-backend')
     compile 'com.android.support:support-v4:21.0.0'
@@ -13,19 +12,19 @@ dependencies {
     compile 'com.intellij:annotations:12.0'
 
     // my library providing the preconditions checks from Guava
-    compile 'com.omricat:guava-preconditions:18.0'
+    compile 'com.omricat.guava-preconditions:guava-preconditions:18.0'
 
     compile 'com.squareup.dagger:dagger:1.2.2'
 
-    compile 'com.squareup.retrofit:retrofit:1.8.0'
-    compile 'com.squareup.retrofit:converter-jackson:1.8.0'
+    compile "com.squareup.retrofit:retrofit:${retrofitVer}"
+    compile "com.squareup.retrofit:converter-jackson:${retrofitVer}"
 
     compile 'com.fasterxml.jackson.core:jackson-databind:2.4.3'
 
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
     compile 'com.squareup.okhttp:okhttp:2.0.0'
 
-    compile 'io.reactivex:rxjava:1.0.0'
+    compile 'io.reactivex:rxjava:1.0.1'
     compile 'io.reactivex:rxandroid:0.23.0'
 
     compile 'com.jakewharton:butterknife:6.0.0'
