--- a/yacc-backend/build.gradle
+++ b/yacc-backend/build.gradle
@@ -4,6 +4,7 @@
 buildscript {
     repositories {
         mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath "com.google.appengine:gradle-appengine-plugin:${gaePluginVer}"
