--- a/yacc-backend/src/main/webapp/WEB-INF/cron.yaml
+++ b/yacc-backend/src/main/webapp/WEB-INF/cron.yaml
@@ -1,4 +1,4 @@
 cron:
   - description: download latest currency values
-    url: /get-latest-currencies
+    url: /update-cron
     schedule: every 5 minutes
