Implemented downloading, storing and reading (whilst building currency data) of currency names

--- a/yacc-backend/src/main/webapp/WEB-INF/app.yaml
+++ b/yacc-backend/src/main/webapp/WEB-INF/app.yaml
@@ -15,3 +15,7 @@ handlers:
     - url: /latest
       servlet : com.omricat.yacc.backend.servlets.LatestServlet
       name: returns the most recent data from the data store
+
+    - url: /update-names
+      servlet: com.omricat.yacc.backend.servlets.CurrencyNamesServlet
+      name: downloads, stores and returns names of currencies
