--- a/yacc-backend/src/main/webapp/WEB-INF/app.yaml
+++ b/yacc-backend/src/main/webapp/WEB-INF/app.yaml
@@ -7,13 +7,13 @@ static_files: #
     - include: /test/**.json
 
 handlers:
-    - url: /update-cron
+    - url: /update-currency-data
       login: admin
       servlet: com.omricat.yacc.backend.servlets.DownloadLatestCurrenciesServlet
       name: cronjob downloader for latest currencies
 
     - url: /latest
-      servlet : com.omricat.yacc.backend.servlets.LatestServlet
+      servlet: com.omricat.yacc.backend.servlets.LatestServlet
       name: returns the most recent data from the data store
 
     - url: /update-names
