Fixed content encoding to utf-8, added NamesHelper class as a delegate to allow CurrenciesProcessor to request the names if they aren't in the data store.

--- a/yacc-backend/src/main/webapp/WEB-INF/app.yaml
+++ b/yacc-backend/src/main/webapp/WEB-INF/app.yaml
@@ -19,3 +19,10 @@ handlers:
     - url: /update-names
       servlet: com.omricat.yacc.backend.servlets.CurrencyNamesServlet
       name: downloads, stores and returns names of currencies
+
+system_properties:
+    file.encoding: UTF-8
+    DEFAULT_ENCODING: UTF-8
+
+inbound_services:
+- warmup
