Updated cron jobs and bumped app engine version

--- a/yacc-backend/src/main/webapp/WEB-INF/cron.yaml
+++ b/yacc-backend/src/main/webapp/WEB-INF/cron.yaml
@@ -1,4 +1,8 @@
 cron:
   - description: download latest currency values
     url: /update-currency-data
-    schedule: every 5 minutes
+    schedule: every 5 minutes synchronized
+
+  - description: download latest currency names
+    url: /update-names
+    schedule: every sunday 03:00
