--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,10 +20,10 @@ dependencies {
     compile "${rootProject.ext.retrofit}"
     compile "${rootProject.ext.retrofitJackson}"
 
-    compile "${rootProject.ext.jackson}"
+    compile "${rootProject.ext.okhttpUrlConnection}"
+    compile "${rootProject.ext.okhttp}"
 
-    compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
-    compile 'com.squareup.okhttp:okhttp:2.0.0'
+    compile "${rootProject.ext.jackson}"
 
     compile "${rootProject.ext.rxJava}"
     compile 'io.reactivex:rxandroid:0.23.0'
