--- a/core/build.gradle
+++ b/core/build.gradle
@@ -10,8 +10,7 @@ dependencies {
     // Intellij annotations (NotNull, Nullable)
     compile "${rootProject.ext.intellijAnnotations}"
 
-    // my library providing the preconditions checks from Guava
-    compile "${rootProject.ext.guavaPreconditions}"
+    compile "${rootProject.ext.guava}"
 
     compile "${rootProject.ext.rxJava}"
 
