--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,6 @@ apply plugin: 'com.android.application'
 
 dependencies {
     compile project(':core')
-    compile project(':yacc-backend')
-
     def supportVersion = '21.0.3'
 
     compile "com.android.support:support-v4:$supportVersion"
@@ -14,20 +12,21 @@ dependencies {
     // Intellij annotations (NotNull, Nullable)
     compile "${rootProject.ext.intellijAnnotations}"
 
-    compile "${rootProject.ext.guavaPreconditions}"
+    compile "${rootProject.ext.guava}"
 
     compile "${rootProject.ext.retrofit}"
     compile "${rootProject.ext.retrofitJackson}"
+    compile "${rootProject.ext.jackson}"
 
     compile "${rootProject.ext.okhttpUrlConnection}"
     compile "${rootProject.ext.okhttp}"
 
-    compile "${rootProject.ext.jackson}"
 
     compile "${rootProject.ext.rxJava}"
     compile 'io.reactivex:rxandroid:0.23.0'
 
     compile 'com.jakewharton:butterknife:6.0.0'
+
 }
 
 
@@ -43,6 +42,11 @@ android {
         versionName "${rootProject.ext.versionMajor}.${rootProject.ext.versionMinor}." +
                 "${rootProject.ext.versionPatch}"
     }
+
+    lintOptions{
+        abortOnError false
+    }
+
     buildTypes {
         debug {
 
