Created class CurrencyKeyRequester to abstract details of getting currently selected currencies from memory, or if not loaded yet, disk. Tests incomplete.

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -25,5 +25,6 @@ dependencies {
     testCompile "${rootProject.ext.junit}"
     testCompile 'nl.jqno.equalsverifier:equalsverifier:1.5'
     testCompile "${rootProject.ext.assertJ}"
+    testCompile "${rootProject.ext.mockito}"
 
 }
