--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,6 @@ dependencies {
     compile 'io.reactivex:rxandroid:0.23.0'
 
     compile 'com.jakewharton:butterknife:6.0.0'
-
 }
 
 
@@ -66,6 +65,9 @@ android {
     packagingOptions {
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/NOTICE'
+    }
+    dexOptions {
+        incremental true
     }
 }
 
