Disable incremental dexing as it was apparently causing build failures

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,7 +69,7 @@ android {
         exclude 'META-INF/NOTICE'
     }
     dexOptions {
-        incremental true
+        incremental false
     }
 }
 
