Fixed errors building tests introduced in #2b9647f

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -24,4 +24,10 @@ dependencies {
     compile "${rootProject.ext.guava}"
 
     compile "${rootProject.ext.rxJava}"
+
+    testCompile "${rootProject.ext.junit}"
+    testCompile 'nl.jqno.equalsverifier:equalsverifier:1.5'
+    testCompile "${rootProject.ext.assertJ}"
+    testCompile "${rootProject.ext.mockito}"
+
 }
