--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':data', ':yacc-backend', ':domain', ':common'
+include ':app', ':data', ':yacc-backend', ':domain', ':common', ':debug'
