Added test dependency on :debug project to :domain build.gradle

--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -42,6 +42,8 @@ dependencies {
 
     compile "${rootProject.ext.jackson}"
 
+    testCompile project(':debug')
+
     testCompile "${rootProject.ext.junit}"
     testCompile 'nl.jqno.equalsverifier:equalsverifier:1.5'
     testCompile "${rootProject.ext.assertJ}"
