--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,12 @@ dependencies {
     compile 'io.reactivex:rxandroid:0.23.0'
 
     compile 'com.jakewharton:butterknife:6.0.0'
+
+    testCompile "${rootProject.ext.junit}"
+    testCompile 'nl.jqno.equalsverifier:equalsverifier:1.5'
+    testCompile "${rootProject.ext.assertJ}"
+    testCompile "${rootProject.ext.mockito}"
+
 }
 
 
