Added nebula gradle-extra-configurations plugin to :domain and :data modules Added in-git-repo Maven repo libs to all subprojects Added Dagger to :domain and :app modules

--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:1.1.0'
 
+        classpath 'com.netflix.nebula:gradle-extra-configurations-plugin:2.2.0'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -65,6 +67,8 @@ subprojects {
 
     repositories {
         jcenter()
+        maven { url "file://${rootProject.projectDir}/libs"}
+
     }
 
 }
