--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ ext {
 
     guava = 'com.google.guava:guava:18.0@jar'
 
-    rxJava = 'io.reactivex:rxjava:1.0.5'
+    rxJava = 'io.reactivex:rxjava:1.0.8'
 
     okhttpUrlConnection = 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
     okhttp = 'com.squareup.okhttp:okhttp:2.0.0'
@@ -71,4 +71,21 @@ subprojects {
 
     }
 
+//    apply plugin: 'idea'
+//    idea {
+//
+//        module {
+//            downloadJavadoc = true
+//            downloadSources = true
+//        }
+//    }
+}
+
+apply plugin: 'idea'
+idea {
+
+    module {
+        downloadJavadoc = true
+        downloadSources = true
+    }
 }
