--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,18 @@ buildscript {
         // annotation processing
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4'
         classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
+        // Android unmocking
+        classpath 'de.mobilej.unmock:UnMockPlugin:0.1.1'
+
     }
 }
 
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'com.jakewharton.hugo'
+apply plugin: 'de.mobilej.unmock'
+
+println "${rootProject.projectDir}"
 
 dependencies {
     compile project(':common')
@@ -104,3 +110,17 @@ android {
     }
 }
 
+unMock {
+    // URI to download the android-all.jar from. e.g. https://oss.sonatype.org/content/groups/public/org/robolectric/android-all/
+    allAndroid =
+            "file://${rootProject.projectDir}/android-all-4" +
+                    ".3_r2-robolectric-0.jar"
+
+    // classes to keep
+    // matched by "startsWith" - you also need to include the dependencies manually
+    // if you start with an "-" the class will match by "equals" (and it will additionally  match
+    // inner classes of this class)
+    keep = [
+            "android.text.TextUtils"
+    ]
+}
