--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 .gradle
 local.properties
-/.idea/workspace.xml
-/.idea/libraries/
+.idea/workspace.xml
+.idea/libraries/
 .DS_Store
 build/
 yacc-backend/WEB-INF/appengine-generated/*
 *.iml
+.idea/dictionaries/
