--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,11 @@ dependencies {
     compile project(':common')
     compile project(':data')
     compile project(':domain')
+
+    // Debug only dependencies
     debugCompile project(':debug')
+    debugCompile 'org.lucasr.dspec:dspec:0.1.1'
+
     // TODO: remove release dependency on debug project
     releaseCompile project(':debug')
 
