--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ buildscript {
 }
 
 
+apply from: 'buildinfo.gradle'
+
 ext {
     versionMajor = 0
     versionMinor = 1
@@ -63,6 +65,7 @@ ext {
 
     equalsVerifier = 'nl.jqno.equalsverifier:equalsverifier:1.5'
     
+    buildInfo = getBuildInfo()
 }
 
 
