Extracted equalsVerifier and retrofitMock dependencies definition to root module

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     compile "${rootProject.ext.rxJava}"
 
     testCompile "${rootProject.ext.junit}"
-    testCompile 'nl.jqno.equalsverifier:equalsverifier:1.5'
+    testCompile "${rootProject.ext.equalsVerifier}"
     testCompile "${rootProject.ext.assertJ}"
     testCompile "${rootProject.ext.mockito}"
 
