--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ ext {
 
     retrofit = "com.squareup.retrofit:retrofit:$retrofitVersion"
     retrofitJackson = "com.squareup.retrofit:converter-jackson:$retrofitVersion"
+    retrofitMock = "com.squareup.retrofit:retrofit-mock:$retrofitVersion"
 
     jackson = 'com.fasterxml.jackson.core:jackson-databind:2.4.3'
 
@@ -60,6 +61,8 @@ ext {
 
     mockito = 'org.mockito:mockito-core:1.10.15'
 
+    equalsVerifier = 'nl.jqno.equalsverifier:equalsverifier:1.5'
+    
 }
 
 
