--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     testCompile project(':debug')
 
     testCompile "${rootProject.ext.junit}"
-    testCompile 'nl.jqno.equalsverifier:equalsverifier:1.5'
+    testCompile "${rootProject.ext.equalsVerifier}"
     testCompile "${rootProject.ext.assertJ}"
     testCompile "${rootProject.ext.mockito}"
 
