--- a/yacc-backend/build.gradle
+++ b/yacc-backend/build.gradle
@@ -38,8 +38,7 @@ dependencies {
     testCompile "com.google.appengine:appengine-api-stubs:${gaePluginVer}"
     testCompile "com.google.appengine:appengine-api-labs:${gaePluginVer}"
 
-    testCompile "com.squareup.retrofit:retrofit-mock:" +
-            "${rootProject.ext.retrofitVersion}"
+    testCompile "${rootProject.ext.retrofitMock}"
     testCompile "${rootProject.ext.mockito}"
     testCompile "${rootProject.ext.assertJ}"
 }
